tests/sksl/errors/InterfaceBlockStorageModifiers.glsl
### Compilation failed:

error: 1: 'out' is not permitted here
uniform foo { out int x; };
              ^^^
1 error
